--- a/LookupAnything/i18n/es.json
+++ b/LookupAnything/i18n/es.json
@@ -31,6 +31,7 @@
 
   // types
   "type.building": "Building", // TODO
+  "type.bush": "Bush", // TODO
   "type.fruit-tree": "Árbol frutal",
   "type.map-tile": "Casilla del mapa",
   "type.monster": "Monstruo",
@@ -212,6 +213,18 @@
   "building.upgrades.coop.1": "up to 8 animals; add incubator, dinosaurs, and ducks",
   "building.upgrades.coop.2": "up to 12 animals; add autofeed and rabbits",
   "building.water-trough.summary": "{{filled}} of {{max}} water troughs filled",
+
+  // bush lookup labels
+  // TODO
+  "bush.name.berry": "Berry Bush",
+  "bush.name.plain": "Plain Bush",
+  "bush.description.berry": "A bush that grows salmonberries and blackberries.",
+  "bush.description.plain": "A plain bush that doesn't grow anything.",
+  "bush.next-harvest": "Next harvest",
+
+  // bush lookup values
+  // TODO
+  "bush.schedule.berry": "20% chance of salmonberries in spring 15-18 and blackberries in fall 8-11.",
 
   // fruit tree lookup labels
   "fruit-tree.complaints": "Quejas",
