--- a/LookupAnything/i18n/fr.json
+++ b/LookupAnything/i18n/fr.json
@@ -31,6 +31,7 @@
 
   // types
   "type.building": "Bâtiment",
+  "type.bush": "Bush", // TODO
   "type.fruit-tree": "Arbre fruitié",
   "type.map-tile": "Case de carte",
   "type.monster": "Monstre",
@@ -210,6 +211,18 @@
   "building.upgrades.coop.1": "jusqu'à 8 animaux, ajoute l'incubateur, permet les dinosaures et les canards",
   "building.upgrades.coop.2": "jusqu'à 12 animaux, ajoute le nourrissage automatique, permet les lapins",
   "building.water-trough.summary": "{{filled}} de {{max}} capacité d'eau",
+
+  // bush lookup labels
+  // TODO
+  "bush.name.berry": "Berry Bush",
+  "bush.name.plain": "Plain Bush",
+  "bush.description.berry": "A bush that grows salmonberries and blackberries.",
+  "bush.description.plain": "A plain bush that doesn't grow anything.",
+  "bush.next-harvest": "Next harvest",
+
+  // bush lookup values
+  // TODO
+  "bush.schedule.berry": "20% chance of salmonberries in spring 15-18 and blackberries in fall 8-11.",
 
   // fruit tree lookup labels
   "fruit-tree.complaints": "Problèmes",
